--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <h1>Привет от {{ student_name }}!</h1>
-        <p>Ура мы задеплоили приложуньку ГОЙДА</p>
+        <p>Ура мы задеплоили приложуньку 228</p>
     </div>
 </body>
 </html>
